--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "guessing_game"
+name = "guessing_game_rust"
 version = "0.1.0"
 authors = ["Tiago Deliberali <tiago.deliberali@gmail.com>"]
 edition = "2018"
